--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -145,10 +145,13 @@
     margin-top: 0;
   }
 
-  .carousel-inner img {
-    object-fit: cover;
-    height: 400px;
-  }
+ .carousel-inner img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  max-height: 500px;
+}
+
 
   .card-img-top {
     object-fit: cover;
