--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="col-md-6">
-        <h4 class="mb-3 text-center">🚗 Các dòng xe Ford 2023</h4>
+        <h4 class="mb-3 text-center">🚗 Các dòng xe Ford </h4>
         <div class="row g-3">
           <div th:each="car : ${cars}" class="col-md-6">
             <div class="card h-100 shadow-sm">
